fixed the nav menu: dropdown alignment, links, colors

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -11,7 +11,3 @@
     font-size: 36px;
     margin-left: 25px;
 }
-
-#school-name {
-    color:red;
-}
